# stock-market-dashboard

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  compose.yaml  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: DATA_CARD.md  MODEL_CARD.md
server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
server/app/: __init__.py  config.py  main.py
server/app/api/: forecasts.py  health.py  market.py  model.py  news.py
server/app/clients/: alpha_vantage.py
server/app/ml/: analogues.py  artifacts.py  backtest.py  baselines.py  evaluate.py  explain.py  features.py  models.py  normalize.py  schemas.py  targets.py  train.py  validation.py
server/app/services/: analogue_service.py  cache.py  forecast_service.py  market_service.py  rate_limiter.py  session.py
server/app/storage/: database.py
server/artifacts/: feature_schema.json  metrics.json  model_version.txt  permutation_importance.json  training_metadata.json  walk_forward_predictions.csv
server/scripts/: bootstrap_history.py  train_models.py
server/tests/: conftest.py  test_alpha_vantage_client.py  test_analogues.py  test_analogues_endpoint.py  test_cache.py  test_endpoints.py  test_features.py  test_normalize.py  test_rate_limiter.py  test_session.py  test_targets.py  test_train_smoke.py
src/: App.tsx  main.tsx
src/hooks/: usePageTitle.ts  (+1 more)
(+96 files in other folders)
