[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spy-forecast-lab-server"
version = "0.1.0"
description = "FastAPI backend for the SPY Forecast Lab: cached Alpha Vantage access + scikit-learn direction models."
requires-python = ">=3.10"
authors = [{ name = "Darren Tang" }]
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.3,<3.0",
    "httpx>=0.27,<1.0",
    "pandas>=2.1,<3.0",
    "numpy>=1.26,<3.0",
    "scikit-learn>=1.4,<2.0",
    "joblib>=1.3,<2.0",
    "python-dateutil>=2.9,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
    "ruff>=0.5",
    "coverage>=7.4",
]
bootstrap = [
    "yfinance>=0.2.40",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# B008: Depends(...) in argument defaults is the standard FastAPI pattern.
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
# Scripts must sys.path.insert before importing app.*.
"scripts/*.py" = ["E402"]
"tests/conftest.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]
